opam-version: "2.0"
name: "stringOf"
version: "1.0"
synopsis: "StringOf data structure to string framework"
description: """
stringOf is a data structure to string framework that is used
to convert various data structures to [string]s that do not
have a string_of function associated with it
"""
maintainer: "Nikunj Chawla <nikchawla312@gmail.com>"
authors: "Nikunj Chawla <nikchawla312@gmail.com>"
homepage: "https://github.com/nik312123/stringOf"
dev-repo: "git+https://github.com/nik312123/stringOf.git"
bug-reports: "https://github.com/nik312123/stringOf/issues"
doc: "https://nik312123.github.io/ocamlLibDocs/stringOf/StringOf/"
depends: [
    "ocaml" {>= "4.08.1"}
    "dune" {>= "2.7.1"}
    "base-bytes"
    "base-unix"
]
build: [
    ["dune" "build" "-p" name "-j" jobs]
    ["dune" "runtest" "-p" name "-j" jobs] {with-test}
    ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
